test/conformance/chainsaw/events/policy/policy-violation-deprecated/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-team
      match:
        any:
          - resources:
              kinds:
                - ConfigMap
      validate:
        message: 'The label `team` is required.'
        pattern:
          metadata:
            labels:
              team: '?*'
