test/conformance/chainsaw/events/policy/policy-violation-deprecated/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: foo
