test/conformance/chainsaw/events/policy/policy-violation-deprecated/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: policy-violation
spec:
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: require-labels
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: resource.yaml
  - name: step-03
    try:
    - assert:
        file: event-assert.yaml
